feat: Simplify API key handling and improve error messages
Removes explicit API key checks in service layer, relying on the environment to provide it. Enhances error handling for invalid API keys, providing more user-friendly feedback. Also updates README with AI Studio link and cleans up browser environment setup in index.html.

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
+    <script>
+      // Shim process.env for browser environments where it's not pre-defined
+      window.process = window.process || { env: {} };
+    </script>
     <style>
-      :root {
-        color-scheme: light;
-      }
+      :root { color-scheme: light; }
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f8faff;
         color: #0f172a;
       }
-      /* Prevent invisible text in various browser themes */
       textarea, input {
         background-color: #ffffff !important;
         color: #0f172a !important;
