--- a/index.html
+++ b/index.html
@@ -8,38 +8,36 @@
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&family=Playfair+Display:ital,wght@0,700;1,700&family=Inter:wght@400;700;900&family=Space+Grotesk:wght@300;700&display=swap" rel="stylesheet">
     <script>
       window.process = { env: { API_KEY: "" } }; // Placeholder shim
     </script>
     <style>
-      :root { color-scheme: light; --accent: #2563eb; }
+      :root { color-scheme: dark; --accent: #2563eb; }
       body {
-        font-family: 'Plus Jakarta Sans', sans-serif;
-        background-color: #0f172a; /* Deep luxury slate */
+        background-color: #020617; /* Deeper midnight background */
         color: #f1f5f9;
         overflow-x: hidden;
-      }
-      .perspective-container {
-        perspective: 2000px;
-      }
-      .card-3d-entrance {
-        transform-style: preserve-3d;
-        animation: entrance3D 1.2s cubic-bezier(0.16, 1, 0.3, 1) forwards;
-      }
-      @keyframes entrance3D {
-        0% { opacity: 0; transform: translateZ(-500px) rotateX(20deg); }
-        100% { opacity: 1; transform: translateZ(0) rotateX(0deg); }
+        transition: background-color 0.5s ease;
       }
       .glass {
-        background: rgba(255, 255, 255, 0.03);
-        backdrop-filter: blur(20px);
+        background: rgba(15, 23, 42, 0.6);
+        backdrop-filter: blur(24px);
         border: 1px solid rgba(255, 255, 255, 0.08);
+        box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
       }
-      .mono { font-family: 'JetBrains Mono', monospace; }
       .custom-scrollbar::-webkit-scrollbar { width: 4px; }
       .custom-scrollbar::-webkit-scrollbar-track { background: transparent; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
+      
+      .variation-card {
+        transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      }
+      .variation-card:hover {
+        transform: translateY(-4px);
+        border-color: rgba(255,255,255,0.2);
+        background: rgba(255,255,255,0.05);
+      }
     </style>
     <script type="importmap">
 {
